only update absolute refs when copying between docs, fdo#48482

The copy/paste formulas code is getting a bit complex. I will try to
write some test cases for it.